# matvis

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  codecov.yml  compare_errors.txt  compare_errors_old.txt  gpu-analysis.nvprof  new.h5  nsight_report.qdrep  nsight_report_zgemm.qdrep  nsight_report_zgemm_single.qdrep  nsight_report_zherk.qdrep  nsight_report_zherk_single.qdrep  nsight_report_zherk_single96.qdrep  pyproject.toml  setup.cfg  setup.py  simFalse_False.npy  simFalse_True.npy  simTrue_False.npy  simTrue_True.npy  simuvFalse_False.npy  simuvTrue_False.npy  simuvTrue_True.npy
.github/ISSUE_TEMPLATE/: question.md
.github/PULL_REQUEST_TEMPLATE/: feature.md
.github/workflows/: check-build.yml  publish-to-pypi.yaml  run_notebooks.yaml  test_suite.yaml  test_suite_gpu.yaml
ci/: notebook-env.yml  test-env.yml
devel/: performance_test_large_matrix_multiply.ipynb
devel/viscalc-performance/: getperf.py  performance_test_large_matrix_multiply.ipynb
devel/viscalc-performance/methods/: __init__.py  _cp.py  _cublas.py  _jax.py  _lib.py  _rowswap.py  arrayfire_gemm.py  cp_dot.py  cp_rowswap.py  cublas_chunkedloop.py  cublas_rowswap.py  cublas_vectorloop.py  cublas_zgemm.py  cublas_zherk.py  jax_chunkedloop.py  jax_dot.py  jax_vectorloop.py  np_dot.py  np_zgemm.py  np_zherk.py  numba_vectorloop.py
docs/: Makefile  api.rst  conf.py  environment.yaml  index.rst  performance.rst  tutorials.rst  understanding_the_algorithm.rst
docs/_autosummary/: vis_cpu.vis_cpu.rst  vis_cpu.vis_gpu.rst
docs/templates/: custom-module.rst
docs/tutorials/: matvis_tutorial.ipynb  vis_cpu_tutorial.ipynb
profiling/: README.md  gemm_experiments.py  roofline.py  run-canonical.sh
scripts/: profile.py  vc-profile.py
src/matvis/: __init__.py  _cublas.py  _test_utils.py  _utils.py  _uvbeam_to_raw.py  cli.py  conversions.py  coordinates.py  cpu.py  gpu.py  plot.py  submatrices.py  wrapper.py
src/matvis/core/: __init__.py  beams.py  coherency.py  coords.py  getz.py  matprod.py  tau.py
src/matvis/cpu/: __init__.py  beams.py  coords.py  cpu.py  matprod.py
src/matvis/gpu/: __init__.py  _cublas.py  beams.py  coords.py  getz.py  gpu.py  matprod.py
src/matvis/gpu_src/: measurement_equation.cu
src/vis_cpu/: __init__.py  _utils.py  _uvbeam_to_raw.py  cli.py  conversions.py  cpu.py  gpu.py  jax.py  plot.py  vis_cpu.py  vis_gpu.py  wrapper.py
src/vis_cpu/gpu_src/: beam_interpolation.c  beam_interpolation.cu  measurement_equation.c  measurement_equation.cu
tests/: __init__.py  conftest.py  test_beam_interp_gpu.py  test_beams.py  test_coherency.py  test_compare_pyuvsim.py  test_conversions.py  test_coordinates.py  test_coordrot.py  test_cpu_vs_gpu.py  test_cublas.py  test_cublas_gpu.py  test_getz.py  test_gpu_utils.py  test_matprod.py  test_matvis_cpu.py  test_matvis_gpu.py  test_plot.py  test_polarized_benchmark.py  test_polarized_sky.py  test_polarized_sky_gpu.py  test_precision_gpu.py  test_utils.py  test_vis_cpu.py  test_vis_gpu.py  test_wrapper.py
tests/matmul_checks/: check_matsets_ordering.py
