[metadata]
name = vis_cpu
description = Fast visibility simulator with interface to CPU and GPU
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/hera-team/vis_cpu
author = HERA-Team
author_email = steven.g.murray@asu.edu
license = MIT
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python

[options]
packages = find_namespace:
install_requires =
    astropy
    numpy
    pyuvdata>=2.2.8
    scipy
    typing-extensions;python_version<'3.8'
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    viscpu = vis_cpu.cli:main

[options.extras_require]
docs =
    nbsphinx
    numpydoc
    sphinx
    sphinx-rtd-theme
gpu =
    jinja2
    pycuda
    scikit-cuda
profile =
    click
    line-profiler
    pyuvsim
test =
    ipython
    matplotlib
    pyradiosky
    pytest
    pytest-cov
    pyuvsim[sim]

[test]
extras = True

[tool:pytest]
addopts =
    --cov vis_cpu --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
ignore =
    E203
    E266
    E501
    W503
    F403
    F401
    E231
    C901
    D401
    B007
per-file-ignores =
    src/vis_cpu/cli.py: T201,T001
    tests/*.py: T201,T001,E402
max-line-length = 88
max-complexity = 25
rst-roles =
    class
    func
    mod
    data
    const
    meth
    attr
    exc
    obj
rst-directives =
    note
    warning
    versionadded
    versionchanged
    deprecated
    seealso
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
