[metadata]
name = matvis
description = Fast matrix-based visibility simulator with interface to CPU and GPU
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/hera-team/matvis
author = HERA-Team
author_email = steven.g.murray@asu.edu
license = MIT
license_files = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
install_requires =
    astropy
    click
    docstring-parser
    line-profiler
    numpy
    psutil
    pyuvdata@git+https://github.com/RadioAstronomySoftwareGroup/pyuvdata
    rich
    scipy
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    matvis = matvis.cli:main

[options.extras_require]
all =
    matvis[gpu,profile,dev]
dev =
    matvis[docs,test]
docs =
    furo
    ipython
    nbsphinx
    numpydoc
    sphinx
gpu =
    cupy
    jinja2
profile =
    click
    line-profiler
    pyuvsim>=1.2.5
test =
    astropy-healpix
    hypothesis
    ipython
    matplotlib
    pyradiosky
    pytest
    pytest-cov
    pytest-lazy-fixtures
    pyuvsim[sim]>=1.2.5

[test]
extras = True

[tool:pytest]
addopts =
    --cov matvis --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
ignore =
    E203
    E266
    E501
    W503
    F403
    F401
    E231
    C901
    D401
    B007
    G004
    D107
per-file-ignores =
    src/matvis/cli.py: T201,T001
    tests/*.py: T201,T001,E402
    setup.py: D100
max-line-length = 88
max-complexity = 25
rst-roles =
    class
    func
    mod
    data
    const
    meth
    attr
    exc
    obj
rst-directives =
    note
    warning
    versionadded
    versionchanged
    deprecated
    seealso
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
